--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.5.1"
   },
   "scripts": {
     "start": "npx cross-env  HOST=127.0.0.1 PORT=5500 react-scripts start",
@@ -60,8 +62,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^4.9.5"
   }
 }
