--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -39,7 +40,7 @@
   },
   "scripts": {
     "start": "npx cross-env  HOST=127.0.0.1 PORT=5500 react-scripts start",
-    "build": "react-scripts build",
+    "build": "set NODE_ENV=production && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
