--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "module": "commonjs",
     "jsx": "react",
-    // "strict": true,
-    "esModuleInterop": true
+    "strict": true,
+    "esModuleInterop": true,
+    "noImplicitAny": true
   }
 }
