postbuild.js - min.js, rename js and css, remove .map

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-admin",
+  "homepage": "/assets/views/modules/learnBoard/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
