--- a/package.json
+++ b/package.json
@@ -6,45 +6,38 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fullcalendar/core": "^5.11.3",
-    "@fullcalendar/daygrid": "^5.11.3",
-    "@fullcalendar/interaction": "^5.11.3",
-    "@fullcalendar/list": "^5.11.3",
-    "@fullcalendar/react": "^5.11.2",
-    "@fullcalendar/timegrid": "^5.11.3",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.15.11",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
     "@mui/x-data-grid": "^7.0.0-beta.5",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@tanstack/react-query": "^5.24.8",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "chart.js": "^3.9.1",
-    "formik": "^2.2.9",
+    "formik": "^2.4.5",
     "fs-extra": "^11.2.0",
     "ky": "^1.2.2",
     "react": "^18.2.0",
-    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
     "react-pro-sidebar": "^1.1.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
-    "recharts": "^2.12.1",
-    "update": "^0.7.4",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "zustand": "^4.5.1"
+    "recharts": "^2.12.2",
+    "swr": "^2.2.5",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "npx cross-env  HOST=127.0.0.1 PORT=5500 react-scripts start",
     "build": "set NODE_ENV=production && react-scripts build && node postbuild.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clear": "depcheck",
+    "update": "npx npm-check-updates -u"
   },
   "eslintConfig": {
     "extends": [
@@ -65,12 +58,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@types/react-router-dom": "^5.3.3",
-    "typescript": "^4.9.5"
+    "eslint-config-react-app": "^7.0.1",
+    "typescript": "^5.4.2"
   }
 }
