Добавление курсов с датой

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^7.0.0-beta.7",
+    "@mui/x-date-pickers": "^6.19.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^5.24.8",
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,6 +24,7 @@
     "ag-grid-react": "^31.2.0",
     "axios": "^1.6.7",
     "chart.js": "^3.9.1",
+    "dayjs": "^1.11.10",
     "formik": "^2.2.9",
     "fs-extra": "^11.2.0",
     "ky": "^1.2.2",
