--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.15.11",
-    "@mui/x-data-grid": "^7.0.0-beta.7",
+    "@mui/x-data-grid": "^7.1.0",
     "@mui/x-date-pickers": "^6.19.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^5.24.8",
