--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.15.11",
-    "@mui/x-data-grid": "^7.1.0",
+    "@mui/material": "^6.0.0-alpha.2",
+    "@mui/x-data-grid": "^7.2.0",
     "@mui/x-date-pickers": "^6.19.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^5.24.8",
