--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ag-grid-react": "^31.2.0",
     "axios": "^1.6.7",
     "chart.js": "^3.9.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "formik": "^2.2.9",
     "fs-extra": "^11.2.0",
