--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   }
 }
